completed week2 assignment

--- a/week2assign/index.html
+++ b/week2assign/index.html
@@ -18,25 +18,19 @@
 
 	<div class="container">
 
-		<section class="main-section">
-			<div class="wrapper">
-				<h2 class="section-heading">Chicken</h2>
+		<section class="main-section first">
+				<h2 class="section-heading one">Chicken</h2>
 				<p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, maiores. Commodi eos sunt labore, repellendus incidunt, quae iure ullam, ea reiciendis at numquam aperiam nesciunt fugit provident quis culpa facere vitae. Voluptas dicta, ex, nihil et itaque laudantium voluptatum quaerat provident possimus, nisi voluptatibus voluptate ducimus pariatur laboriosam ipsum praesentium.</p>
-			</div>
 		</section>
 
-		<section class="main-section">
-			<div class="wrapper">
-				<h2 class="section-heading">Beef</h2>
+		<section class="main-section second">
+				<h2 class="section-heading two">Beef</h2>
 				<p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, maiores. Commodi eos sunt labore, repellendus incidunt, quae iure ullam, ea reiciendis at numquam aperiam nesciunt fugit provident quis culpa facere vitae. Voluptas dicta, ex, nihil et itaque laudantium voluptatum quaerat provident possimus, nisi voluptatibus voluptate ducimus pariatur laboriosam ipsum praesentium.</p>
-			</div>
 		</section>
 
-		<section class="main-section">
-			<div class="wrapper">
-				<h2 class="section-heading">Chicken</h2>
+		<section class="main-section third">
+				<h2 class="section-heading three">Sushi</h2>
 				<p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, maiores. Commodi eos sunt labore, repellendus incidunt, quae iure ullam, ea reiciendis at numquam aperiam nesciunt fugit provident quis culpa facere vitae. Voluptas dicta, ex, nihil et itaque laudantium voluptatum quaerat provident possimus, nisi voluptatibus voluptate ducimus pariatur laboriosam ipsum praesentium.</p>
-			</div>
 		</section>
 	</div>
 	
