--- a/week3assign/index.html
+++ b/week3assign/index.html
@@ -14,7 +14,7 @@
     
     
     <header class="container-fluid p-0">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
           <a class="navbar-brand font-weight-bold" href="#">Food, LLC</a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
