--- a/week3assign/index.html
+++ b/week3assign/index.html
@@ -22,7 +22,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav d-block d-sm-none text-center font-weight-bold">
+            <ul class="navbar-nav d-block d-md-none text-center font-weight-bold">
               <li class="nav-item active">
                 <a class="nav-link" href="#">Chicken</a>
               </li>
