added the product section

--- a/samarth/index.html
+++ b/samarth/index.html
@@ -142,6 +142,7 @@
 
 	<section class="main-content">
 		
+		<!-- vision misssion section  -->
 		<div class="container vision-mission">
 				
 			<div class="row">
@@ -158,6 +159,62 @@
 			</div>
 
 		</div>
+		<!-- vision mission section  -->
+
+		<!-- our products section -->
+	<section id="products">
+        <div class="container wrap-modules text-center">
+            <div class="row mb-5">
+                <div class="col">
+                    <h1>Our Products</h1>
+                    <p class="mt-2 mb-5">Check out What all We produce</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 ">
+                    <div class="card">
+                    	 <img class="img-fluid  w-100 mb-2 " src="img/core.jpg" alt="shell-cores">
+                         <div class="card-body">  
+                            <h2 class="card-title">Shell Cores</h2>
+                            <p class="card-text">A core is a device used in casting processes to produce internal cavities and reentrant angles. They are most commonly used in sand casting, but are also used in die casting and injection moulding...... </p>
+                            <div class="p-4">
+                                <a href="" class="btn">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+              	  </div>
+
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                    <div class="card">
+                    	 <img class="img-fluid  w-100 mb-2  " src="img/shell.jpg" alt="shell-cores">
+                         <div class="card-body">  
+                            <h2 class="card-title">Shell Moulds</h2>
+                            <p class="card-text">Supporting both ferrous and non-ferrous metals, shell molding is a molding process that’s characterized by the use of a sand-base mold. Companies don’t use just regular “beach” sand for this process..... </p>
+                            <div class="p-4 ">
+                                <a href="" class="btn">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+          	   </div>
+
+
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                    <div class="card">
+                    	 <img class="img-fluid w-100 mb-2" src="img/ferrous.jpg" alt="shell-cores">
+                         <div class="card-body">  
+                            <h2 class="card-title">Non-Ferrous Castings</h2>
+                            <p class="card-text">Non-ferrous alloys do not contain iron in appreciable amounts. Common materials are aluminum, brass, copper and titanium.... </p>
+                            <div class="p-4">
+                                <a href="" class="btn">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+          	  </div>	
+
+            </div>
+        </div>
+    </section>
+	<!-- our products section -->
 
 	</section>
 
