professional touch to the home page

--- a/samarth/products.html
+++ b/samarth/products.html
@@ -65,14 +65,14 @@
  						</ul>
  					</p>
 
- 					<button class="btn btn-lg btn-primary my-5 p-3 product-button">Contuct For Orders</button>
+ 					<a href="#to"><button class="btn btn-lg btn-primary my-5 p-3 product-button">Contuct For Orders</button></a>
  				</div>
  				
 			</div>
 			<!-- single-product  ends-->
 
 			<!-- single product starts -->
-			<div class="row justify-content-center py-5">
+			<div class="row justify-content-center py-5" id="to">
  				<div class="col-12 col-lg-4 text-center product-image-col d-md-flex flex-md-column justify-content-center">
  					<img class="img-fluid product-image align-self-center" src="img/nonferrous.jpg" alt="shell-core-product-2">
  				</div>
