--- a/samarth/index.html
+++ b/samarth/index.html
@@ -22,8 +22,14 @@
 		<!-- navigation bar starts -->
 		<nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
 
-			  <a class="navbar-brand text-white" href="#">
-				SAMARTH INDUSTRIES
+			  <a class="navbar-brand text-white d-flex justify-content-center align-items-center" href="#">
+			  	<div>
+			  	<img class="img-fluid brand-image" src="img/logo.jpg"  alt="">
+			   </div>
+			  	<div class="brand-title">
+			  		<span class="d-block">SAMARTH</span>
+			  		<span class="d-block">INDUSTRIES</span>
+			  	</div>
 			  </a>
 
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mydropdown" aria-controls="mydropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,7 +188,7 @@
 				<h2>Our source of inspiration</h2>
 			</div>
 			<div class="row justify-content-center text-center">
-				<div class="col-lg-6">
+				<div class="col-lg-6 mb-5">
 					<img class="make-in-india-image img-fluid" src="img/makeinindia.png" alt="make-in-india-banner">
 				</div>
 				<div class="col-lg-6">
